--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
 body{
+    margin: 0;
     font-family: 'poppins',sans-serif;
 }
+.top-banner{
+    background-image: url("images/top-banner.png");
+    background-repeat: no-repeat;
+}
+section{
+    height: 700px;
+}
+
 h1{
 font-size: 50px;
 font-family: 'Poppins', sans-serif;
@@ -10,11 +19,47 @@ font-family: 'Poppins', sans-serif;
 }
 .half-width{
     width: 40%;
-    float: left;
+    float:left ;
     margin-left: 5%;
 
     padding-left: 2%;
 }
 .half-width img{
-    width: 100%;
+    width: 90%;
+}
+.button{
+    border-radius: 6px;
+    padding: 15px 30px;
+    color:white;
+  
+    text-decoration: none;
+    background-image: linear-gradient(45deg,rgb(46, 46, 43),rgb(81, 82, 70));
+}
+.dream-area{
+   
+    background-image: url("images/dream-bg.png");
+    background-position: right;
+    background-repeat: no-repeat;
+}
+.experience-highlight{
+    color: orange;
+}
+
+.box-shadow{
+    box-shadow: 10px 10px 40px gray ;
+    border-radius: 5px;
+    height: 70%;
+}
+.last-experience{
+    padding-left: 90px;
+    width: 80%;
+}
+.experience-zone{
+    background-image: url("images/exp-bg.png");
+    background-position:left;
+    background-repeat: no-repeat;
+    
+}
+#fancy{
+    border-left: 5px solid green;
 }
