--- a/style.css
+++ b/style.css
@@ -63,3 +63,8 @@ font-family: 'Poppins', sans-serif;
 #fancy{
     border-left: 5px solid green;
 }
+footer{
+    text-align: center;
+    color: rgb(0, 0, 0);
+    background-color: burlywood;
+}
